@@ -296,9 +296,10 @@
 
 (defun main-unprotected (&key (display (or (getenv "DISPLAY") ":0")) protocol
 			 (base-dir (directory-namestring (or *load-truename* "")))
-			 (read-conf-file-p t)
+			 (read-conf-file-p t) (alternate-conf nil)
 			 error-msg)
   (setf *contrib-dir* base-dir)
+  (conf-file-name alternate-conf)
   (when read-conf-file-p
     (read-conf-file))
   (handler-case
@@ -330,13 +331,15 @@
 
 (defun main (&key (display (or (getenv "DISPLAY") ":0")) protocol
 	     (base-dir (directory-namestring (or *load-truename* "")))
-	     (read-conf-file-p t))
+	     (read-conf-file-p t)
+	     (alternate-conf nil))
   (let (error-msg)
     (catch 'exit-clfswm
       (loop
 	 (handler-case
 	     (main-unprotected :display display :protocol protocol :base-dir base-dir
 			       :read-conf-file-p read-conf-file-p
+			       :alternate-conf alternate-conf
 			       :error-msg error-msg)
 	   (error (c)
 	     (let ((msg (format nil "CLFSWM Error: ~A." c)))
